--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "coffeyscript",
-  "displayName": "CoffeyScript",
+  "name": "coffeyscript-theme",
+  "displayName": "CoffeyScript Theme",
   "description": "Theme based on the colors of the CoffeeScript page examples",
   "version": "0.0.1",
   "engines": {
@@ -12,7 +12,7 @@
   "contributes": {
     "themes": [
       {
-        "label": "CoffeyScript",
+        "label": "CoffeyScript Theme",
         "uiTheme": "vs-dark",
         "path": "./themes/CoffeyScript-color-theme.json"
       }
