--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffeyscript-theme",
+  "name": "coffeyscript",
   "displayName": "CoffeyScript Theme",
   "description": "Theme based on the colors of the CoffeeScript page examples",
   "version": "0.0.1",
