--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffeyscript",
+  "name": "coffeyscript-theme",
   "displayName": "CoffeyScript Theme",
   "description": "Theme based on the colors of the CoffeeScript page examples",
   "version": "0.0.1",
@@ -29,5 +29,5 @@
     "url": "https://github.com/MichaelCoffey6/CoffeyScript-VSC-Theme.git",
     "type": "git"
   },
-  "publisher": "coffeyscript-theme",
+  "publisher": "michaelcoffeymint",
 }
